add to cart-product

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                     <a class="navbar-brand" href="./index.html"><img src="./assets/Layout/Brand/logo-colored.png" alt=""></a>
                 </div>
                 <div class="icons">
-                    <img src="./assets/Mobile/Icon/Vector.png" alt="">
-                    <img src="./assets/Mobile/Icon/control/person.png" alt="">
+                    <a href="./cart.html"><img src="./assets/Mobile/Icon/Vector.png" alt="cart"></a>
+                    <img src="./assets/Mobile/Icon/control/person.png" alt="profile">
                 </div>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <form class="d-flex" role="search">
@@ -68,7 +68,7 @@
                             <a class="nav-link" href="#"><i class="fa-solid fa-heart"></i><p>Orders</p></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><i class="fa-solid fa-basket-shopping"></i><p>Add to cart</p></a>
+                            <a class="nav-link" href="./cart.html"><i class="fa-solid fa-basket-shopping"></i><p>Add to cart</p></a>
                         </li>
                     </ul>
                 </div>
@@ -222,38 +222,38 @@
                 </div>
             </div>
             <div class="cards">
-                <a href="#" class="card">
+                <a href="./product-watch.html" class="card">
                     <img src="./assets/Image/tech/8.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Smart watches</h5>
                         <span>-25%</span>
                     </div>
                 </a>
-                <a href="#" class="card">
+                <a href="./Product-laptop.html" class="card">
                     <img src="./assets/Image/tech/image 34.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Laptops</h5>
                         <span>-15%</span>
                     </div>
                 </a>
-                <a href="#" class="card">
+                <a href="./Product-camera.html" class="card">
                     <img src="./assets/Image/tech/6.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">GoPro cameras</h5>
                         <span>-40%</span>
                     </div>
                 </a>
-                <a href="#" class="card">
+                <a href="./Product-headphone.html" class="card">
                     <img src="./assets/Image/tech/image 29.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Headphones</h5>
                         <span>-25%</span>
                     </div>
                 </a>
-                <a href="#" class="card">
+                <a href="./product-phone.html" class="card">
                     <img src="./assets/Image/tech/image 23.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Canon camreras</h5>
+                        <h5 class="card-title">Canon Mobile</h5>
                         <span>-25%</span>
                     </div>
                 </a>
